<resources>
    <string name="app_name">All Video Downloader</string>
    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="about">About Us</string>
    <string name="developer_name">Shakil Ahmmed</string>
    <string name="story_aver">Story Saver</string>
    <string name="youtube">YouTube</string>
    <string name="download_youtube_videos">Download youtube videos</string>
    <string name="facebook">Facebook</string>
    <string name="download_facebook_videos">Download facebook videos</string>
    <string name="instagram">Instagram</string>
    <string name="download_instagram_videos">Download instagram videos</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="save_whatsapp_videos">Save WhatsApp videos</string>
    <string name="tiktok">TikTok</string>
    <string name="download_tiktok_videos">Download TikTok videos</string>
    <string name="twitter">Twitter</string>
    <string name="download_twitter_videos">Download twitter videos</string>
    <string name="likee">Likee</string>
    <string name="download_likee_videos">Download likee videos</string>
    <string name="sharechat">ShareChat</string>
    <string name="download_sharechat_videos">Download ShareChat videos</string>
    <string name="downloader">Downloader</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="paste_youtube_link_here">Paste Youtube link here</string>
    <string name="paste_facebook_link_here">Paste Facebook link here</string>
    <string name="paste_instagram_link_here">Paste Instagram link here</string>
    <string name="paste_tiktok_link_here">Paste Tiktok link here</string>
    <string name="paste_twitter_link_here">Paste Twitter link here</string>
    <string name="paste_likee_link_here">Paste Likee link here</string>
    <string name="paste_sharechat_link_here">Paste ShareChat link here</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_with_whatsapp">SEND WITH WHATSAPP</string>
    <string name="share_link">SHARE LINK</string>
    <string name="title">Title</string>
    <string name="video_date">14-09-2020</string>
    <string name="video_size">9.70MB</string>
    <string name="video_duration">02:20</string>
    <string name="resolution_360p">360p</string>
    <string name="resolution_480p">480p</string>
    <string name="resolution_720p">720p</string>
    <string name="mp3">MP3</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="app_update2">App Update</string>
    <string name="file_location">File Location</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="open_with">Open with</string>
    <string name="app_version">App Version</string>
    <string name="mailId">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="telegram_link">https://t.me/Mellow04</string>
    <string name="developer">Developer</string>
    <string name="check_for_update">Check for update</string>
    <string name="no_files_found">No Files Found</string>
    <string name="exit">Exit</string>

    <string name="prefs_theme_key">theme</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>