<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_downloader"
            android:icon="@drawable/ic_download"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_switch_item"
            android:icon="@drawable/ic_send"
            app:actionLayout="@layout/drawer_switch"
            android:title="Theme Color" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy"/>
        <item
            android:id="@+id/nav_app_update"
            android:icon="@drawable/ic_update"
            android:title="@string/app_update2"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/baseline_storage_24"
            android:title="@string/file_location"/>
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_apps"
            android:title="More Apps"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit"/>
    </group>
</menu>
