<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color2"
    tools:context=".Fragment.Youtube.YoutubeDownloader">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/colorStatsGray"
            android:textIsSelectable="true"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paste_youtube_link_here"
                android:id="@+id/youtubeEditTextId"
                android:textSize="16sp"
                android:textColor="@color/colorStatsGray"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radBtn360"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution_360p"
                    android:textColor="?attr/text_color2" />

                <RadioButton
                    android:id="@+id/radBtn480"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution_480p"
                    android:textColor="?attr/text_color2"/>

                <RadioButton
                    android:id="@+id/radBtn720"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution_720p"
                    android:textColor="?attr/text_color2"/>

                <RadioButton
                    android:id="@+id/radBtnaudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MP3"
                    android:textColor="?attr/text_color2"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/youtubeDownloadButtonId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?attr/button_color2"
                android:text="@string/download"
                android:textColor="?attr/text_color"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/youtubePasteLinkId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/button_color3"
                android:text="@string/paste"
                android:textColor="?attr/text_color"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</FrameLayout>