<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background_color2"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutUsToolbarId"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/instagramActionBarTitleId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-3dp"
                    android:layout_weight="1"
                    android:textColor="?attr/text_color"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/about_us"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/text_color"
                android:text="@string/developer"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/text_color"
                android:text="@string/developer_name"
                android:gravity="center"
                android:textSize="24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_info"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color2"
                    android:text="@string/app_version"
                    android:gravity="start"
                    style="@android:style/TextAppearance.Medium"/>
                <TextView
                    android:id="@+id/appVersionId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:gravity="start"
                    android:textColor="?attr/sub_text_color"
                    style="@android:style/TextAppearance.Small"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_mail"
                android:layout_gravity="center"
                app:itemIconTint="?attr/image_color2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:gravity="start"
                    android:textColor="?attr/text_color2"
                    style="@android:style/TextAppearance.Medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mailId"
                    android:gravity="start"
                    android:textColor="?attr/sub_text_color"
                    style="@android:style/TextAppearance.Small"
                    android:textIsSelectable="true"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/telegramId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_telegram"
                android:layout_gravity="center"
                app:itemIconTint="?attr/image_color2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:gravity="start"
                    android:textColor="?attr/text_color2"
                    style="@android:style/TextAppearance.Medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram_link"
                    android:gravity="start"
                    android:textColor="?attr/sub_text_color"
                    style="@android:style/TextAppearance.Small"
                    android:textIsSelectable="true"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


