<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialogCloseId"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_circle_background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="2dp"
            android:src="@drawable/ic_close"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/direct_chat"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textColor="?attr/text_color2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>



        <LinearLayout
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_style"
                app:ccp_autoDetectCountry="false"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_showFullName="false"
                app:ccp_showArrow="false"
                app:ccp_defaultNameCode="BD"
                app:ccp_countryPreference="BD"
                android:paddingEnd="10dp"
                app:ccp_contentColor="@color/colorStatsGray">
            </com.hbb20.CountryCodePicker>
            <!--app:ccp_countryPreference="BD"-->

            <EditText
                android:id="@+id/phoneNumberEdit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_weight="60"
                android:background="@drawable/button_style"
                android:hint="@string/enter_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/colorStatsGray"
                android:textColorHint="@color/colorStatsGray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center">
            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_style"
                android:backgroundTintMode="screen"
                android:gravity="start"
                android:hint="@string/enter_your_message"
                android:inputType="textShortMessage"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorStatsGray"
                android:textColorHint="@color/colorStatsGray"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/whatsAppMessageId"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_button"
                android:padding="10dp"
                android:text="@string/send_with_whatsapp"
                android:textColor="?attr/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shareButtonId"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_button"
                android:padding="10dp"
                android:text="@string/share_link"
                android:textColor="?attr/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>








