<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/round_color"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/videoOnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp"
            android:foreground="?attr/selectableItemBackground">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_2sdp"
                app:cardBackgroundColor="@color/colorStatsGray"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/videoThumb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_play" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right|center_vertical|center_horizontal|center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_1sdp"
                    android:text="@string/video_duration"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_8sdp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/title"
                    android:singleLine="true"
                    android:textColor="?attr/text_color2"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/bangla_text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/video_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_date"
                        android:textColor="?attr/text_color2"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="video_size"
                        android:textColor="?attr/text_color2"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/video_option"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/_6sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_menu"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
</layout>
